# filter-reddit

backend/: pyproject.toml
backend/backend/: celery.py  settings.py
backend/common/clients/: __init__.py  abstract_kafka_consumer.py  gemini_client.py  kafka_producer.py  opensearch_client.py
backend/sub_reddit_fetch/: apps.py
backend/sub_reddit_fetch/management/commands/: consume_reddit_data.py  sub_reddit_data_cli.py
backend/sub_reddit_fetch/opensearch_mapping/: opensearch_index_mapping.json
backend/sub_reddit_fetch/services/: embeddings_kafka_consumer.py  sub_reddit_data_extractor.py
backend/sub_reddit_fetch/tasks/: run_embeddings_ingestion.py  run_sub_reddit_data.py
reddit-data-filter-api/: .gitignore  README.md  main.py  pyproject.toml  run.py
