[project]
name = "reddit-data-filter-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "praw>=7.7.1",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.7",
]
